# LSCInternship

./: 1DEulerSLIC.cpp  2DEulerSLIC.cpp  2D_HLLC.cpp  CMakeLists.txt  CompFluidsEx4.cpp  HLLC_MHD.cpp  MHD1D.cpp  MHD_M.cpp  MHD_MUSCL_2D.cpp  NewMHDSim.cpp  README.md  SLIC_MHD.cpp  SolovEv.cpp  environment.yml  requirements.txt  test.cpp
include/: MHD.h  SLIC.h  boundaryconditions.h  config.h  euler.h  fluxmethods.h  initialise.h  save.h  timestep.h
plot/: 1Dplot_script.plt  BFieldAnimation.py  HLLC_plot_script.plt  MHDplot_script.plt  Plotting.py  SolovEv_plot_script.plt  plot_script.plt
src/: MHD.cpp  SLIC.cpp  boundaryconditions.cpp  euler.cpp  fluxmethods.cpp  initialise.cpp  main.cpp  save.cpp  timestep.cpp
